docs: add example for running gpt-oss